dataset1235/2025-2/610742602/users/2070606917/executions/906907063_854576230.log
== SUBMISSION (2025-08-19 21:23:29)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.lower("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.lower("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'lower'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.lower("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'lower'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:19)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print((.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print((.upper("Ada Lovelace foi a primeira programadora da historia")
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print((.upper("Ada Lovelace foi a primeira programadora da historia")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:22:33)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:21:36)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:18:55)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print("frase.upper)("Ada Lovelace a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase.upper)("Ada Lovelace a primeira programadora da historia")
                                                                         ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase.upper)("Ada Lovelace a primeira programadora da historia")
                                                                         ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:24:44)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.upper(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:15:12)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print("frase.upper")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:47)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:24:10)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:17:29)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print("frase.upper(Ada Lovelace a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase.upper(Ada Lovelace a primeira programadora da historia)
          ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase.upper(Ada Lovelace a primeira programadora da historia)
          ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:35)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x000001CF4E9DCF10>
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x0000023417BDCF10>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:22:08)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:23:22)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print.lower("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.lower("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'lower'
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.lower("Ada Lovelace foi a primeira programadora da historia")
    ^^^^^^^^^^^
AttributeError: 'builtin_function_or_method' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:29:25)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:29:23)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:20:04)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print("frase=(upper("Ada Lovelace a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase=(upper("Ada Lovelace a primeira programadora da historia")
                                                                         ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print("frase=(upper("Ada Lovelace a primeira programadora da historia")
                                                                         ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:33)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(.upper("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:27:13)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper)(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper)(Ada Lovelace foi a primeira programadora da historia)
                       ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper)(Ada Lovelace foi a primeira programadora da historia)
                       ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:28:40)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x000002AD56DFCF10>
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x0000021A72B0CF10>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:26:02)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:27:01)
-- CODE: 
frase = ("Ada Lovelace foi a primeira programadora da historia")
print(frase.upper)=(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper)=(Ada Lovelace foi a primeira programadora da historia)
                        ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(frase.upper)=(Ada Lovelace foi a primeira programadora da historia)
                        ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
